test/valid/64854_printA/printA.agu
-- Author: 64854, Diogo Almeida

let printA (_) : Unit -> Unit =
    print(unit)

let main (_) : Unit -> Unit =
    printA(unit)