test/invalid-semantic/64854_adding_string_int/adding_string_int.agu
-- Author: 64854, Diogo Almeida

let a : String = "a";
let x : Int = 1;
-- type checking problem
let res : String = a + x